ui/css/src/host-admin.scss
/*
 * Copyright IBM Corp, 2015
 *
 * This library is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public
 * License as published by the Free Software Foundation; either
 * version 2.1 of the License, or (at your option) any later version.
 *
 * This library is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public
 * License along with this library; if not, write to the Free Software
 * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
 */

// Core variables
@import "../../../../../../../ui/css/src/modules/wok-variables";

// Compass Mixins
@import "../../../../../../../ui/css/src/vendor/compass-mixins/lib/compass";

.ginger .host-admin {
    font-size: 12px;
    font-weight: bold;
    margin: 10px;
}

.ginger .host-admin h3 {
    height: 32px;
    padding: 10px 15px;
    font-size: 20px;
    border-radius: 2px 2px 0 0;
    display: inline-block;
}

.ginger .host-admin h3 > a > span.accordion-icon {
    display: inline-block;
    font: normal normal normal 14px/1 FontAwesome;
    text-rendering: auto;
    -webkit-font-smoothing: antialiased;
    font-size: 20px;
    color: #5a595b;
}

.ginger .host-admin h3 > a > span.accordion-text {
    margin-left: 20px;
}

.ginger .host-admin h3 > a[aria-expanded="true"] > span.accordion-icon:before {
    content: "\f01b";
}

.ginger .host-admin h3 > a[aria-expanded="false"] > span.accordion-icon:before {
    content: "\f01a";
}

.ginger .host-admin a {
    color: #9e9e9e;
    text-decoration: none;
}

.ginger .host-admin hr {
    width: 93%;
    border: 1.8px solid #eaeaea;
    margin-top: 30px !important;
}

.ginger .host-admin .content-area {
    background: linear-gradient(to bottom, #FFFFFF 0%, #E5E5E5 100%) repeat scroll 0 0 transparent;
    border-radius: 0px 0px 2px 2px;
    color: #666666;
}

.ginger .host-admin .content-area .section {
    margin: 10px;
}

.ginger .host-admin .content-area .section .firmware-ver {
    margin-left: 10px;
}

.ginger .host-admin .content-area .section .pack-path-label {
    display: inline-block;
    vertical-align: top;
}

.ginger .host-admin .content-area .section .pack-path-content {
    display: inline-block;
    margin: 0 10px 0 13px;
}

.ginger .host-admin .content-area .section .pack-path-input {
    width: 400px;
    height: 30px;
    border: 1px solid grey;
}

.ginger .host-admin .message-area {
    display: inline-block;
    background-color: #CCFFFF;
    border-radius: 5px 5px 5px 5px;
    margin-bottom: 10px;
    padding: 10px 40px 10px 10px;
    font-weight: normal;
    font-size: 14px;
}

.ginger .host-admin .progress-icon {
    background-image: url("base/images/progress48.gif");
    display: inline-block;
    background-size: 20px 20px;
    width: 20px;
    height: 20px;
    margin-right: 10px;
    vertical-align: middle;
}

.ginger .host-admin .progress-icon-sensor {
    background: url("base/images/progress48.gif") center no-repeat;
    height: 50px;
    margin-top: 20px;
}

.ginger .host-admin input.invalid-field[type="text"] {
    border: 1px solid #FF4444 !important;
    padding: 2px;
}

.ginger .host-admin .input-hint-icon {
    background-image: url("base/images/ui-icons_888888_256x240.png");
    display: inline-block;
}

.ginger .host-admin .input-hint {
    font-weight: normal;
    margin-top: 1px;
}

.ginger .host-admin .input-hint-text {
    vertical-align: top;
}

.ginger .host-admin button {
    font-weight: bold;
    height: 35px;
    width: 80px;
    vertical-align: top;
}

.ginger .host-admin .content-area .action-bar {
    height: 30px;
    position: relative;
}

.ginger .host-admin .content-area .action-bar .item {
    float: right;
}

.ginger .host-admin .content-area .action-bar .item:not(:first-child) {
    margin-right: 5px;
}

.ginger .host-admin .content-area .bak-grid-header {
    margin: 20px 0 10px 0px;
    font-size: 14px;
    border-bottom: 1px solid #AAAAAA;
}

.ginger .host-admin .content-area .bak-grid-item {
    padding: 5px 0;
    font-weight: normal;
    cursor: pointer;
}

.ginger .host-admin .content-area .cell {
    display: inline-block;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    padding-right: 20px;
}

.ginger .host-admin .content-area .file-col {
    width: 530px;
    max-width: 530px;
}

.ginger .host-admin .content-area .file-col:hover {
    text-decoration: underline;
}

.ginger .host-admin .content-area .time-col {
    width: 300px;
    max-width: 300px;
}

.ginger .host-admin .content-area .time-col:hover {
    text-decoration: underline;
}

.ginger .host-admin .content-area .bak-grid-body {
    margin-bottom: 20px;
    min-height: 50px;
}

.ginger .host-admin .content-area .bak-grid-body .cell {
    vertical-align: middle;
    text-overflow: ellipsis;
}

.ginger .host-admin .content-area .bak-grid-body .act-button {
    height: 20px;
    width: 20px;
    padding-right: 0;
}

.ginger-dialog {
    display: none;
    margin: 20px;
    font-size: 12px;
}

.ginger-dialog input.invalid-field[type="text"] {
    border: 1px solid #FF4444 !important;
}

.ginger-dialog input.invalid-field[type="text"][disabled] {
    border: 1px solid #aaaaaa !important;
}

.ginger-dialog .del-option {
    height: 25px;
    margin-bottom: 5px;
}

.ginger-dialog .del-option input[type="radio"] {
    margin-bottom: 7px;
    margin-right: 5px;
    vertical-align: middle;
}

.ginger-dialog .del-option input[type="text"] {
    width: 50px;
    vertical-align: middle;
}

.ginger-dialog .crt-bak-section {
    height: 25px;
    margin-bottom: 10px;
}

.ginger-dialog .crt-bak-section .desc {
    width: 500px;
}
/* ... */

